<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/FirstFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.tripledes.FirstFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_first">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />
        <action
            android:id="@+id/action_FirstFragment_to_SettingsFragment"
            app:destination="@id/SettingsFragment" />
    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.tripledes.SecondFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_second">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
        <action
            android:id="@+id/action_SecondFragment_to_ChatFragment"
            app:destination="@id/ChatFragment" />
    </fragment>
    <fragment
        android:id="@+id/SettingsFragment"
        android:name="com.example.tripledes.SettingsFragment"
        android:label="@string/settings_fragment_label"
        tools:layout="@layout/fragment_settings">
        <action
            android:id="@+id/action_SettingsFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/ChatFragment"
        android:name="com.example.tripledes.ChatFragment"
        android:label="@string/select_chat_user"
        tools:layout="@layout/fragment_chat">
        <action
            android:id="@+id/action_ChatFragment_to_ChatUserFragment"
            app:destination="@id/ChatUserFragment" />
    </fragment>

    <fragment
        android:id="@+id/ChatUserFragment"
        android:name="com.example.tripledes.ChatUserFragment"
        android:label="@string/chat_user"
        tools:layout="@layout/fragment_chat">
    </fragment>
</navigation>